# habr_news_slint

./: Cargo.toml  README.md  build.rs
src/: header.rs  lib.rs  main.rs
ui/: appwindow.slint
